--- a/app/index.html
+++ b/app/index.html
@@ -53,6 +53,7 @@
     <!-- endbuild -->
 
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
+        <script src="scripts/buildconfig.js"></script>
         <script src="scripts/app.js"></script>
         <script src="scripts/routes.js"></script>
         <!-- endbuild -->
