--- a/app/index.html
+++ b/app/index.html
@@ -56,6 +56,7 @@
         <script src="scripts/buildconfig.js"></script>
         <script src="scripts/app.js"></script>
         <script src="scripts/routes.js"></script>
+        <script src="scripts/services/api.js"></script>
         <!-- endbuild -->
 </body>
 </html>
