--- a/app/index.html
+++ b/app/index.html
@@ -58,6 +58,7 @@
         <script src="scripts/routes.js"></script>
         <script src="scripts/services/api.js"></script>
         <script src="scripts/controllers/home.js"></script>
+        <script src="scripts/controllers/admin.js"></script>
         <script src="scripts/controllers/article.view.js"></script>
         <script src="scripts/controllers/article.edit.js"></script>
         <!-- endbuild -->
